Enhance responsive design for forgot password page; update media queries for improved layout on various screen sizes and adjust font sizes for better readability. Fix font size in sub-text for consistency.

--- a/assets/css/base/typo.css
+++ b/assets/css/base/typo.css
@@ -71,7 +71,7 @@
 }
 @media (max-width: 600px) {
   .fancy {
-    font-size: 2rem;
+    font-size: 1.9rem;
     font-weight: 400;
   }
   .normal {
