--- a/assets/css/forgotPassword.css
+++ b/assets/css/forgotPassword.css
@@ -75,7 +75,7 @@ body {
 .sub-text {
   color: var(--primary-blue);
   font-family: Inter;
-  font-size: rem;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 110%; /* 1.2375rem */
@@ -149,4 +149,90 @@ body {
   line-height: 110%;
   letter-spacing: -0.06rem;
   text-align: center;
+}
+/*/ INSERT_YOUR_CODE */
+@media (max-width: 600px) {
+  body {
+    padding: 1rem;
+  }
+
+  .forgotPassword-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .forgotPassword-box-content {
+    width: 100%;
+    padding: 1rem;
+    box-shadow: none;
+    gap: 0rem;
+  }
+
+  .forgotPassword-form-container {
+    align-items: flex-start;
+    gap: 0rem;
+  }
+
+  .forgotPassword-form {
+    margin: 1.5rem 0;
+  }
+
+  .sub-text {
+    font-size: 0.7rem;
+    margin-top: 0.2rem;
+  }
+
+  .otp-inputs {
+    grid-template-columns: repeat(6, 2.8rem);
+  }
+
+  .success-fancy {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 400px) {
+  .otp-inputs {
+    grid-template-columns: repeat(6, 2.4rem);
+  }
+}
+@media (max-width: 1024px) {
+  body {
+    padding: 1rem;
+  }
+
+  .forgotPassword-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .forgotPassword-box-content {
+    width: 100%;
+    padding: 1rem;
+    box-shadow: none;
+    gap: 0rem;
+  }
+
+  .forgotPassword-form-container {
+    align-items: flex-start;
+    gap: 0rem;
+  }
+
+  .forgotPassword-form {
+    margin: 1.5rem 0;
+  }
+
+  .sub-text {
+    font-size: 0.7rem;
+    margin-top: 0.2rem;
+  }
+
+  .otp-inputs {
+    grid-template-columns: repeat(6, 13.5vw);
+  }
+
+  .success-fancy {
+    font-size: 1.8rem;
+  }
 }
